--- a/src/package.json
+++ b/src/package.json
@@ -17,35 +17,34 @@
   },
   "author": "",
   "dependencies": {
-    "@babel/cli": "7.2.3",
-    "@babel/core": "7.2.2",
-    "@babel/plugin-proposal-class-properties": "7.2.3",
+    "@babel/cli": "7.4.4",
+    "@babel/core": "7.4.5",
+    "@babel/plugin-proposal-class-properties": "7.4.4",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
+    "@babel/plugin-syntax-object-rest-spread": "7.2.0",
     "@babel/plugin-transform-object-assign": "7.2.0",
-    "@babel/plugin-transform-runtime": "7.2.0",
-    "@babel/polyfill": "7.2.5",
-    "@babel/preset-env": "7.2.3",
+    "@babel/plugin-transform-runtime": "7.4.4",
+    "@babel/polyfill": "7.4.4",
+    "@babel/preset-env": "7.4.5",
     "@babel/preset-react": "7.0.0",
-    "@babel/register": "7.0.0",
-    "@babel/runtime": "7.2.0",
+    "@babel/register": "7.4.4",
+    "@babel/runtime": "7.4.5",
     "@material-ui/core": "3.9.1",
     "@material-ui/icons": "3.0.2",
-    "babel-loader": "8.0.5",
-    "es6-mixins": "1.0.2",
-    "prop-types": "15.6.2",
-    "react": "16.7.0",
-    "react-dom": "16.7.0",
+    "babel-loader": "8.0.6",
+    "prop-types": "15.7.2",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
     "socket.io": "2.2.0",
     "socket.io-client": "2.2.0",
-    "uglifyjs-webpack-plugin": "2.1.1",
-    "vlow": "1.1.4",
-    "webpack": "4.28.3",
-    "webpack-cli": "3.2.1",
-    "webpack-bundle-analyzer": "3.0.3"
+    "vlow": "1.1.5",
+    "webpack": "4.35.0",
+    "webpack-bundle-analyzer": "3.3.2",
+    "webpack-cli": "3.3.5"
   },
   "devDependencies": {
     "babel-eslint": "10.0.1",
-    "eslint": "5.12.0",
-    "eslint-plugin-react": "7.12.3"
+    "eslint": "5.16.0",
+    "eslint-plugin-react": "7.13.0"
   }
 }
