new branch devAnja

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "git.ignoreLimitWarning": true,
-    "python.pythonPath": "C:\\Users\\Koos\\AppData\\Local\\Programs\\Python\\Python36\\python.exe"
+    "python.pythonPath": "/home/anja/miniconda3/bin/python"
 }
