--- a/src/package.json
+++ b/src/package.json
@@ -46,6 +46,7 @@
   "devDependencies": {
     "babel-eslint": "10.0.1",
     "eslint": "5.16.0",
-    "eslint-plugin-react": "7.13.0"
+    "eslint-plugin-react": "7.13.0",
+    "eslint-plugin-react-hooks": "^1.6.1"
   }
 }
