--- a/src/package.json
+++ b/src/package.json
@@ -32,6 +32,7 @@
     "@material-ui/core": "4.1.3",
     "@material-ui/icons": "4.2.1",
     "babel-loader": "8.0.6",
+    "jsleri": "1.1.8",
     "npm": "^6.10.1",
     "prop-types": "15.7.2",
     "react": "16.8.6",
@@ -41,7 +42,11 @@
     "vlow": "1.1.5",
     "webpack": "4.35.0",
     "webpack-bundle-analyzer": "3.3.2",
-    "webpack-cli": "3.3.5"
+    "webpack-cli": "3.3.5",
+    "css-loader": "^1.0.0",
+    "style-loader": "^0.23.1",
+    "monaco-editor-webpack-plugin": "1.7.0",
+    "monaco-editor": "0.17.1"
   },
   "devDependencies": {
     "babel-eslint": "10.0.1",
