--- a/src/package.json
+++ b/src/package.json
@@ -39,6 +39,7 @@
     "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
+    "react-draggable": "3.3.2",
     "socket.io": "2.2.0",
     "socket.io-client": "2.2.0",
     "style-loader": "^0.23.1",
