--- a/src/package.json
+++ b/src/package.json
@@ -35,11 +35,12 @@
     "css-loader": "^1.0.0",
     "monaco-editor": "0.17.1",
     "monaco-editor-webpack-plugin": "1.7.0",
-    "npm": "^6.11.2",
+    "npm": "^6.11.3",
     "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-draggable": "3.3.2",
+    "react-dropzone": "10.1.9",
     "socket.io": "2.2.0",
     "socket.io-client": "2.2.0",
     "style-loader": "^0.23.1",
