--- a/src/package.json
+++ b/src/package.json
@@ -33,9 +33,10 @@
     "@material-ui/icons": "4.2.1",
     "babel-loader": "8.0.6",
     "css-loader": "^1.0.0",
+    "moment": "^2.24.0",
     "monaco-editor": "0.17.1",
     "monaco-editor-webpack-plugin": "1.7.0",
-    "npm": "^6.11.3",
+    "npm": "^6.13.6",
     "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
@@ -53,6 +54,7 @@
     "babel-eslint": "10.0.1",
     "eslint": "5.16.0",
     "eslint-plugin-react": "7.13.0",
-    "eslint-plugin-react-hooks": "^1.6.1"
+    "eslint-plugin-react-hooks": "^1.6.1",
+    "moment-locales-webpack-plugin": "^1.1.2"
   }
 }
