--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "thingsgui",
-  "version": "0.0.1-alpha8",
+  "version": "0.0.1-beta",
   "description": "ThingsGUI",
   "main": "index.js",
   "repository": {
@@ -36,7 +36,7 @@
     "moment": "^2.24.0",
     "monaco-editor": "0.17.1",
     "monaco-editor-webpack-plugin": "1.7.0",
-    "npm": "^6.13.6",
+    "npm": "^6.13.7",
     "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
