--- a/src/package.json
+++ b/src/package.json
@@ -33,6 +33,7 @@
     "@material-ui/icons": "4.2.1",
     "babel-loader": "8.0.6",
     "css-loader": "^1.0.0",
+    "deep-equal": "^2.0.1",
     "moment": "^2.24.0",
     "monaco-editor": "0.17.1",
     "monaco-editor-webpack-plugin": "1.7.0",
