--- a/src/package.json
+++ b/src/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "thingsgui",
+  "name": "things-gui",
   "version": "0.0.4-beta",
   "description": "ThingsGUI",
   "main": "index.js",
