--- a/src/package.json
+++ b/src/package.json
@@ -17,45 +17,46 @@
   },
   "author": "",
   "dependencies": {
-    "@babel/cli": "7.4.4",
-    "@babel/core": "7.4.5",
-    "@babel/plugin-proposal-class-properties": "7.4.4",
-    "@babel/plugin-syntax-dynamic-import": "7.2.0",
-    "@babel/plugin-syntax-object-rest-spread": "7.2.0",
-    "@babel/plugin-transform-object-assign": "7.2.0",
-    "@babel/plugin-transform-runtime": "7.4.4",
-    "@babel/polyfill": "7.4.4",
-    "@babel/preset-env": "7.4.5",
-    "@babel/preset-react": "7.0.0",
-    "@babel/register": "7.4.4",
-    "@babel/runtime": "7.4.5",
-    "@material-ui/core": "4.1.3",
-    "@material-ui/icons": "4.2.1",
-    "babel-loader": "8.0.6",
-    "css-loader": "^1.0.0",
+    "@babel/cli": "7.8.4",
+    "@babel/core": "7.9.0",
+    "@babel/plugin-proposal-class-properties": "7.8.3",
+    "@babel/plugin-syntax-dynamic-import": "7.8.3",
+    "@babel/plugin-syntax-object-rest-spread": "7.8.3",
+    "@babel/plugin-transform-object-assign": "7.8.3",
+    "@babel/plugin-transform-runtime": "7.9.0",
+    "@babel/polyfill": "7.8.7",
+    "@babel/preset-env": "7.9.0",
+    "@babel/preset-react": "7.9.1",
+    "@babel/register": "7.9.0",
+    "@babel/runtime": "7.9.2",
+    "@material-ui/core": "4.9.7",
+    "@material-ui/icons": "4.9.1",
+    "babel-loader": "8.1.0",
+    "css-loader": "^3.4.2",
+    "file-loader": "6.0.0",
     "deep-equal": "^2.0.1",
     "moment": "^2.24.0",
-    "monaco-editor": "0.17.1",
-    "monaco-editor-webpack-plugin": "1.7.0",
-    "npm": "^6.13.7",
+    "monaco-editor": "0.20.0",
+    "monaco-editor-webpack-plugin": "1.9.0",
+    "npm": "^6.14.3",
     "prop-types": "15.7.2",
-    "react": "16.8.6",
-    "react-dom": "16.8.6",
-    "react-draggable": "3.3.2",
-    "react-dropzone": "10.1.9",
-    "socket.io": "2.2.0",
-    "socket.io-client": "2.2.0",
-    "style-loader": "^0.23.1",
-    "vlow": "1.1.5",
-    "webpack": "4.35.0",
-    "webpack-bundle-analyzer": "3.3.2",
-    "webpack-cli": "3.3.5"
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-draggable": "4.2.0",
+    "react-dropzone": "10.2.1",
+    "socket.io": "2.3.0",
+    "socket.io-client": "2.3.0",
+    "style-loader": "1.1.3",
+    "vlow": "1.1.7",
+    "webpack": "4.42.0",
+    "webpack-bundle-analyzer": "3.6.1",
+    "webpack-cli": "3.3.11"
   },
   "devDependencies": {
-    "babel-eslint": "10.0.1",
-    "eslint": "5.16.0",
-    "eslint-plugin-react": "7.13.0",
-    "eslint-plugin-react-hooks": "^1.6.1",
-    "moment-locales-webpack-plugin": "^1.1.2"
+    "babel-eslint": "10.1.0",
+    "eslint": "6.8.0",
+    "eslint-plugin-react": "7.19.0",
+    "eslint-plugin-react-hooks": "^2.5.1",
+    "moment-locales-webpack-plugin": "^1.2.0"
   }
 }
