--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "things-gui",
-  "version": "0.0.9-beta",
+  "version": "0.1.0",
   "description": "ThingsGUI",
   "main": "index.js",
   "repository": {
