--- a/src/package.json
+++ b/src/package.json
@@ -56,7 +56,7 @@
   "devDependencies": {
     "babel-eslint": "10.1.0",
     "eslint": "6.8.0",
-    "eslint-plugin-react": "7.17.0",
+    "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-react-hooks": "^2.5.1",
     "moment-locales-webpack-plugin": "^1.2.0"
   }
