--- a/src/package.json
+++ b/src/package.json
@@ -11,53 +11,55 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "./node_modules/.bin/eslint './**/*.js' --color",
-    "analyze": "NODE_ENV='analyze' ./node_modules/.bin/webpack -p --progress --profile --colors",
-    "build:dev": "./node_modules/.bin/webpack -d --progress --profile --colors --watch",
-    "build:prod": "NODE_ENV='production' ./node_modules/.bin/webpack -p"
+    "analyze": "NODE_ENV='analyze' ./node_modules/.bin/webpack -p --progress --profile --color",
+    "build:dev": "./node_modules/.bin/webpack --progress --profile --color --watch --devtool eval-cheap-source-map",
+    "build:prod": "NODE_ENV='production' ./node_modules/.bin/webpack"
   },
   "author": "",
   "dependencies": {
-    "@babel/cli": "7.8.4",
-    "@babel/core": "7.9.0",
-    "@babel/plugin-proposal-class-properties": "7.8.3",
+    "@babel/cli": "7.12.10",
+    "@babel/core": "7.12.10",
+    "@babel/plugin-proposal-class-properties": "7.12.1",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
     "@babel/plugin-syntax-object-rest-spread": "7.8.3",
-    "@babel/plugin-transform-object-assign": "7.8.3",
-    "@babel/plugin-transform-runtime": "7.9.0",
-    "@babel/polyfill": "7.8.7",
-    "@babel/preset-env": "7.9.0",
-    "@babel/preset-react": "7.9.1",
-    "@babel/register": "7.9.0",
-    "@babel/runtime": "7.9.2",
-    "@material-ui/core": "4.9.7",
-    "@material-ui/icons": "4.9.1",
-    "babel-loader": "8.1.0",
-    "css-loader": "^3.4.2",
-    "deep-equal": "^2.0.1",
-    "file-loader": "6.0.0",
-    "moment": "^2.24.0",
-    "monaco-editor": "0.20.0",
-    "monaco-editor-webpack-plugin": "1.9.0",
-    "npm": "^6.14.3",
+    "@babel/plugin-transform-object-assign": "7.12.1",
+    "@babel/plugin-transform-runtime": "7.12.10",
+    "@babel/polyfill": "7.12.1",
+    "@babel/preset-env": "7.12.11",
+    "@babel/preset-react": "7.12.10",
+    "@babel/register": "7.12.10",
+    "@babel/runtime": "7.12.5",
+    "@material-ui/core": "4.11.3",
+    "@material-ui/icons": "4.11.2",
+    "babel-loader": "8.2.2",
+    "css-loader": "5.0.1",
+    "deep-equal": "2.0.5",
+    "file-loader": "6.2.0",
+    "moment": "2.29.1",
+    "monaco-editor": "0.21.3",
+    "monaco-editor-webpack-plugin": "2.1.0",
+    "npm": "^6.14.11",
     "prop-types": "15.7.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-draggable": "4.2.0",
-    "react-dropzone": "10.2.1",
-    "react-helmet": "^6.0.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-draggable": "4.4.3",
+    "react-dropzone": "11.2.4",
+    "react-helmet": "^6.1.0",
     "socket.io": "2.3.0",
-    "socket.io-client": "2.3.0",
-    "style-loader": "1.1.3",
-    "vlow": "1.1.7",
-    "webpack": "4.42.0",
-    "webpack-bundle-analyzer": "3.6.1",
-    "webpack-cli": "3.3.11"
+    "socket.io-client": "2.3.1",
+    "style-loader": "2.0.0",
+    "terser": "5.5.1",
+    "terser-webpack-plugin": "5.1.1",
+    "vlow": "1.1.10",
+    "webpack": "5.14.0",
+    "webpack-bundle-analyzer": "4.3.0",
+    "webpack-cli": "4.3.1"
   },
   "devDependencies": {
     "babel-eslint": "10.1.0",
-    "eslint": "7.14.0",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "moment-locales-webpack-plugin": "^1.2.0"
+    "eslint": "7.17.0",
+    "eslint-plugin-react": "7.22.0",
+    "eslint-plugin-react-hooks": "4.2.0",
+    "moment-locales-webpack-plugin": "1.2.0"
   }
 }
