--- a/.gitignore
+++ b/.gitignore
@@ -109,6 +109,7 @@ src/node_modules/
 static/js/*.html
 static/js/*-bundle-*.js
 static/js/*-bundle-*.min.js
+static/js/*-bundle-*.min.js.LICENSE.txt
 
 # NPM
 src/npm-debug.log
