--- a/src/package.json
+++ b/src/package.json
@@ -59,6 +59,7 @@
   },
   "devDependencies": {
     "babel-eslint": "10.1.0",
+    "dotenv": "^10.0.0",
     "eslint": "7.17.0",
     "eslint-plugin-react": "7.22.0",
     "eslint-plugin-react-hooks": "4.2.0",
