--- a/src/package.json
+++ b/src/package.json
@@ -31,6 +31,7 @@
     "@babel/runtime": "7.12.5",
     "@material-ui/core": "4.11.3",
     "@material-ui/icons": "4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "babel-loader": "8.2.2",
     "css-loader": "5.0.1",
     "deep-equal": "2.0.5",
