--- a/react/package.json
+++ b/react/package.json
@@ -17,19 +17,19 @@
   },
   "author": "",
   "dependencies": {
-    "@babel/cli": "7.12.10",
-    "@babel/core": "7.12.10",
-    "@babel/plugin-proposal-class-properties": "7.12.1",
+    "@babel/cli": "7.14.5",
+    "@babel/core": "7.14.6",
+    "@babel/plugin-proposal-class-properties": "7.14.5",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
     "@babel/plugin-syntax-object-rest-spread": "7.8.3",
-    "@babel/plugin-transform-object-assign": "7.12.1",
-    "@babel/plugin-transform-runtime": "7.12.10",
+    "@babel/plugin-transform-object-assign": "7.14.5",
+    "@babel/plugin-transform-runtime": "7.14.5",
     "@babel/polyfill": "7.12.1",
-    "@babel/preset-env": "7.12.11",
-    "@babel/preset-react": "7.12.10",
-    "@babel/register": "7.12.10",
-    "@babel/runtime": "7.12.5",
-    "@material-ui/core": "4.11.3",
+    "@babel/preset-env": "7.14.7",
+    "@babel/preset-react": "7.14.5",
+    "@babel/register": "7.14.5",
+    "@babel/runtime": "7.14.6",
+    "@material-ui/core": "4.12.3",
     "@material-ui/icons": "4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "babel-loader": "8.2.2",
@@ -37,31 +37,31 @@
     "deep-equal": "2.0.5",
     "file-loader": "6.2.0",
     "moment": "2.29.1",
-    "monaco-editor": "0.21.3",
-    "monaco-editor-webpack-plugin": "2.1.0",
-    "npm": "^6.14.11",
+    "monaco-editor": "0.27.0",
+    "monaco-editor-webpack-plugin": "4.1.2",
+    "npm": "7.24.0",
     "path-browserify": "^1.0.1",
     "prop-types": "15.7.2",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-draggable": "4.4.3",
-    "react-dropzone": "11.2.4",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-draggable": "4.4.4",
+    "react-dropzone": "11.4.0",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "socket.io": "2.4.1",
     "socket.io-client": "2.4.0",
     "style-loader": "2.0.0",
-    "terser": "5.5.1",
-    "terser-webpack-plugin": "5.1.1",
-    "vlow": "1.1.11",
-    "webpack": "5.14.0",
-    "webpack-bundle-analyzer": "4.3.0",
-    "webpack-cli": "4.3.1"
+    "terser": "5.7.1",
+    "terser-webpack-plugin": "5.1.4",
+    "vlow": "1.1.13",
+    "webpack": "5.44.0",
+    "webpack-bundle-analyzer": "4.4.2",
+    "webpack-cli": "4.7.2"
   },
   "devDependencies": {
     "babel-eslint": "10.1.0",
-    "eslint": "7.17.0",
-    "eslint-plugin-react": "7.22.0",
+    "eslint": "7.30.0",
+    "eslint-plugin-react": "7.24.0",
     "eslint-plugin-react-hooks": "4.2.0",
     "moment-locales-webpack-plugin": "1.2.0"
   }
