--- a/.gitignore
+++ b/.gitignore
@@ -111,6 +111,7 @@ react/static/js/*-bundle-*.js
 react/static/js/*-bundle-*.min.js
 react/static/js/*-bundle-*.min.js.LICENSE.txt
 react/static/js/*.worker.js
+react/static/js/*.ttf
 
 # NPM
 react/npm-debug.log
