--- a/.github/workflows/ci_node.yml
+++ b/.github/workflows/ci_node.yml
@@ -28,6 +28,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+        cache-dependency-path: 'react/package-lock.json'
     - name: Install dependencies
       run: |
         npm install
