--- a/react/package.json
+++ b/react/package.json
@@ -26,7 +26,6 @@
     "@babel/plugin-transform-runtime": "7.17.12",
     "@babel/polyfill": "7.12.1",
     "@babel/preset-env": "7.17.12",
-    "@babel/preset-react": "7.17.12",
     "@babel/register": "7.17.7",
     "@babel/runtime": "7.17.9",
     "@emotion/react": "11.9.0",
@@ -61,8 +60,9 @@
     "webpack-cli": "4.9.2"
   },
   "devDependencies": {
-    "babel-eslint": "10.1.0",
-    "eslint": "8.15.0",
+    "@babel/eslint-parser": "7.17.0",
+    "@babel/preset-react": "7.17.12",
+    "eslint": "8.10.0",
     "eslint-plugin-react": "7.29.4",
     "eslint-plugin-react-hooks": "4.5.0",
     "moment-locales-webpack-plugin": "1.2.0"
