--- a/react/package.json
+++ b/react/package.json
@@ -26,7 +26,7 @@
     "@babel/plugin-transform-runtime": "7.17.12",
     "@babel/polyfill": "7.12.1",
     "@babel/preset-env": "7.17.12",
-    "@babel/preset-react": "^7.17.12",
+    "@babel/preset-react": "7.17.12",
     "@babel/register": "7.17.7",
     "@babel/runtime": "7.17.9",
     "@emotion/react": "11.9.0",
