--- a/react/package.json
+++ b/react/package.json
@@ -17,55 +17,55 @@
   },
   "author": "",
   "dependencies": {
-    "@babel/cli": "7.17.10",
-    "@babel/core": "7.17.12",
-    "@babel/plugin-proposal-class-properties": "7.17.12",
+    "@babel/cli": "7.21.0",
+    "@babel/core": "7.21.4",
+    "@babel/plugin-proposal-class-properties": "7.18.6",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
     "@babel/plugin-syntax-object-rest-spread": "7.8.3",
-    "@babel/plugin-transform-object-assign": "7.16.7",
-    "@babel/plugin-transform-runtime": "7.17.12",
+    "@babel/plugin-transform-object-assign": "7.18.6",
+    "@babel/plugin-transform-runtime": "7.21.4",
     "@babel/polyfill": "7.12.1",
-    "@babel/preset-env": "7.17.12",
-    "@babel/preset-react": "7.17.12",
-    "@babel/register": "7.17.7",
-    "@babel/runtime": "7.17.9",
-    "@emotion/react": "11.9.0",
-    "@emotion/styled": "11.8.1",
-    "@mui/icons-material": "5.8.0",
-    "@mui/lab": "5.0.0-alpha.82",
-    "@mui/material": "5.8.0",
-    "babel-loader": "8.2.5",
+    "@babel/preset-env": "7.21.4",
+    "@babel/preset-react": "7.18.6",
+    "@babel/register": "7.21.0",
+    "@babel/runtime": "7.21.0",
+    "@emotion/react": "11.10.6",
+    "@emotion/styled": "11.10.6",
+    "@mui/icons-material": "5.11.16",
+    "@mui/lab": "5.0.0-alpha.125",
+    "@mui/material": "5.11.16",
+    "babel-loader": "9.1.2",
     "css-loader": "5.2.7",
-    "deep-equal": "2.0.5",
+    "deep-equal": "2.2.0",
     "file-loader": "6.2.0",
     "moment": "2.29.4",
-    "monaco-editor": "0.33.0",
+    "monaco-editor": "0.37.1",
     "monaco-editor-webpack-plugin": "7.0.1",
-    "npm": "8.11.0",
+    "npm": "9.6.4",
     "path-browserify": "1.0.1",
     "prop-types": "15.8.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-draggable": "4.4.5",
-    "react-dropzone": "14.2.1",
+    "react-dropzone": "14.2.3",
     "react-helmet": "6.1.0",
-    "react-router-dom": "6.3.0",
+    "react-router-dom": "6.10.0",
     "socket.io": "2.5.0",
     "socket.io-client": "2.4.0",
-    "style-loader": "3.3.1",
-    "terser": "5.14.2",
-    "terser-webpack-plugin": "5.3.1",
-    "vis-network": "^9.1.2",
-    "vlow": "1.1.14",
-    "webpack": "5.76.0",
-    "webpack-bundle-analyzer": "4.5.0",
-    "webpack-cli": "4.9.2"
+    "style-loader": "3.3.2",
+    "terser": "5.16.9",
+    "terser-webpack-plugin": "5.3.7",
+    "vis-network": "9.1.6",
+    "vlow": "1.1.16",
+    "webpack": "5.78.0",
+    "webpack-bundle-analyzer": "4.8.0",
+    "webpack-cli": "5.0.1"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "7.17.0",
-    "eslint": "8.10.0",
-    "eslint-plugin-react": "7.29.4",
-    "eslint-plugin-react-hooks": "4.5.0",
+    "@babel/eslint-parser": "7.21.3",
+    "eslint": "8.38.0",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0",
     "moment-locales-webpack-plugin": "1.2.0"
   }
 }
