--- a/react/package.json
+++ b/react/package.json
@@ -17,55 +17,55 @@
   },
   "author": "",
   "dependencies": {
-    "@babel/cli": "7.24.7",
-    "@babel/core": "7.24.7",
+    "@babel/cli": "7.26.4",
+    "@babel/core": "7.26.9",
     "@babel/plugin-proposal-class-properties": "7.18.6",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
     "@babel/plugin-syntax-object-rest-spread": "7.8.3",
-    "@babel/plugin-transform-object-assign": "7.24.7",
-    "@babel/plugin-transform-runtime": "7.24.7",
+    "@babel/plugin-transform-object-assign": "7.25.9",
+    "@babel/plugin-transform-runtime": "7.26.9",
     "@babel/polyfill": "7.12.1",
-    "@babel/preset-env": "7.24.7",
-    "@babel/preset-react": "7.24.7",
-    "@babel/register": "7.24.6",
-    "@babel/runtime": "7.24.7",
-    "@emotion/react": "11.11.4",
-    "@emotion/styled": "11.11.5",
-    "@mui/icons-material": "5.15.21",
-    "@mui/lab": "5.0.0-alpha.170",
-    "@mui/material": "5.15.21",
-    "babel-loader": "9.1.3",
-    "css-loader": "5.2.7",
+    "@babel/preset-env": "7.26.9",
+    "@babel/preset-react": "7.26.3",
+    "@babel/register": "7.25.9",
+    "@babel/runtime": "7.26.9",
+    "@emotion/react": "11.14.0",
+    "@emotion/styled": "11.14.0",
+    "@mui/icons-material": "6.4.7",
+    "@mui/lab": "6.0.0-beta.30",
+    "@mui/material": "6.4.7",
+    "babel-loader": "10.0.0",
+    "css-loader": "7.1.2",
     "deep-equal": "2.2.3",
     "file-loader": "6.2.0",
     "moment": "2.30.1",
-    "monaco-editor": "0.50.0",
+    "monaco-editor": "0.52.2",
     "monaco-editor-webpack-plugin": "7.1.0",
-    "npm": "10.8.1",
+    "npm": "11.2.0",
     "path-browserify": "1.0.1",
     "prop-types": "15.8.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-draggable": "4.4.6",
-    "react-dropzone": "14.2.3",
+    "react-dropzone": "14.3.8",
     "react-helmet": "6.1.0",
-    "react-router-dom": "6.24.0",
+    "react-router": "7.3.0",
     "socket.io": "4.8.0",
     "socket.io-client": "2.4.0",
     "style-loader": "4.0.0",
-    "terser": "5.31.1",
-    "terser-webpack-plugin": "5.3.10",
+    "terser": "5.39.0",
+    "terser-webpack-plugin": "5.3.14",
     "vis-network": "9.1.9",
     "vlow": "1.1.17",
-    "webpack": "5.95.0",
+    "webpack": "5.98.0",
     "webpack-bundle-analyzer": "4.10.2",
-    "webpack-cli": "5.1.4"
+    "webpack-cli": "6.0.1"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "7.24.7",
-    "eslint": "8.57.0",
-    "eslint-plugin-react": "7.34.1",
-    "eslint-plugin-react-hooks": "4.6.0",
+    "@babel/eslint-parser": "7.26.8",
+    "eslint": "9.22.0",
+    "eslint-plugin-react": "7.37.4",
+    "eslint-plugin-react-hooks": "5.2.0",
     "moment-locales-webpack-plugin": "1.2.0"
   }
 }
