--- a/react/package.json
+++ b/react/package.json
@@ -12,60 +12,60 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "./node_modules/.bin/eslint './**/*.js' --color",
     "analyze": "NODE_ENV='analyze' ./node_modules/.bin/webpack -p --progress --profile --color",
-    "build:dev": "./node_modules/.bin/webpack --progress --profile --color --watch --devtool eval-cheap-source-map",
+    "build:dev": "cross-env ./node_modules/.bin/webpack --progress --profile --color --watch --devtool eval-cheap-source-map",
     "build:prod": "NODE_ENV='production' ./node_modules/.bin/webpack"
   },
   "author": "",
   "dependencies": {
-    "@babel/cli": "7.26.4",
-    "@babel/core": "7.26.9",
+    "@babel/cli": "7.28.3",
+    "@babel/core": "7.28.5",
     "@babel/plugin-proposal-class-properties": "7.18.6",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
     "@babel/plugin-syntax-object-rest-spread": "7.8.3",
-    "@babel/plugin-transform-object-assign": "7.25.9",
-    "@babel/plugin-transform-runtime": "7.26.9",
+    "@babel/plugin-transform-object-assign": "7.27.1",
+    "@babel/plugin-transform-runtime": "7.28.5",
     "@babel/polyfill": "7.12.1",
-    "@babel/preset-env": "7.26.9",
-    "@babel/preset-react": "7.26.3",
-    "@babel/register": "7.25.9",
-    "@babel/runtime": "7.26.9",
+    "@babel/preset-env": "7.28.5",
+    "@babel/preset-react": "7.28.5",
+    "@babel/register": "7.28.3",
+    "@babel/runtime": "7.28.4",
     "@emotion/react": "11.14.0",
-    "@emotion/styled": "11.14.0",
-    "@mui/icons-material": "6.4.7",
-    "@mui/lab": "6.0.0-beta.30",
-    "@mui/material": "6.4.7",
+    "@emotion/styled": "11.14.1",
+    "@mui/icons-material": "7.3.5",
+    "@mui/lab": "7.0.1-beta.19",
+    "@mui/material": "7.3.5",
     "babel-loader": "10.0.0",
     "css-loader": "7.1.2",
     "deep-equal": "2.2.3",
     "file-loader": "6.2.0",
     "moment": "2.30.1",
-    "monaco-editor": "0.52.2",
-    "monaco-editor-webpack-plugin": "7.1.0",
-    "npm": "11.2.0",
+    "monaco-editor": "^0.53.0",
+    "monaco-editor-webpack-plugin": "7.1.1",
+    "npm": "^9.9.4",
     "path-browserify": "1.0.1",
     "prop-types": "15.8.1",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-draggable": "4.4.6",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "react-draggable": "4.5.0",
     "react-dropzone": "14.3.8",
     "react-helmet": "6.1.0",
-    "react-router": "7.3.0",
-    "socket.io": "4.8.0",
+    "react-router": "7.9.5",
+    "socket.io": "4.8.1",
     "socket.io-client": "2.4.0",
     "style-loader": "4.0.0",
-    "terser": "5.39.0",
+    "terser": "5.44.1",
     "terser-webpack-plugin": "5.3.14",
     "vis-network": "9.1.9",
-    "vlow": "1.1.17",
-    "webpack": "5.98.0",
+    "vlow": "1.1.27",
+    "webpack": "5.102.1",
     "webpack-bundle-analyzer": "4.10.2",
     "webpack-cli": "6.0.1"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "7.26.8",
-    "eslint": "9.22.0",
-    "eslint-plugin-react": "7.37.4",
-    "eslint-plugin-react-hooks": "5.2.0",
+    "@babel/eslint-parser": "7.28.5",
+    "eslint": "9.39.1",
+    "eslint-plugin-react": "7.37.5",
+    "eslint-plugin-react-hooks": "7.0.1",
     "moment-locales-webpack-plugin": "1.2.0"
   }
 }
