--- a/.gitignore
+++ b/.gitignore
@@ -109,7 +109,7 @@ react/node_modules/
 react/static/js/*.html
 react/static/js/*-bundle-*.js
 react/static/js/*-bundle-*.min.js
-react/static/js/*-bundle-*.min.js.LICENSE.txt
+react/static/js/*.LICENSE.txt
 react/static/js/*.worker.js
 react/static/js/*.ttf
 react/static/font/
